Correcciones + .sln raiz

--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 /BBDD/DML/DML_DataPROD.sql
+/PLANTILLA.DEDOMENA/PLANTILLA.DEDOMENA/appsettings.json
+/PLANTILLA.ICARO/PLANTILLA.ICARO/appsettings.json
