--- a/PLANTILLA/PLANTILLA/appsettings.json
+++ b/PLANTILLA/PLANTILLA/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PLANTILLA.DEDOMENA": "http://localhost:26288/"
+    "PLANTILLA.DEDOMENA": "https://localhost:5002/"
   },
   //SERILOG
   "Serilog": {
