Varios arreglos (Nombres Controllers + Referencias VYP) - Se modifican los nombres de controllers y grupos para adaptaralo a modo Template - Se eliminan algunas referencias a VYP (Primer proyecto)

--- a/PLANTILLA.DEDOMENA/PLANTILLA.DEDOMENA/appsettings.json
+++ b/PLANTILLA.DEDOMENA/PLANTILLA.DEDOMENA/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VYPPORTAL.ICARO": "https://localhost:5001/",
+    "ICARO": "https://localhost:5001/",
     "DbConnect": "Server=localhost;Database=;Port=3306;Uid=;Pwd="
 
   },
