--- a/PLANTILLA.ICARO/PLANTILLA.ICARO/appsettings.json
+++ b/PLANTILLA.ICARO/PLANTILLA.ICARO/appsettings.json
@@ -13,7 +13,7 @@
 
   "ApiOAuth": {
     "Issuer": "https://localhost:5001/",
-    "Audience": "VYPPORTAL:ICARO",
+    "Audience": "ICARO",
     "SecretKey": ""
   },
   //SERILOG
